Temp. fix problems with external libs

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             </section>
         </div>
     </div>
-		<script type="text/javascript" src="../node_modules/intro.js/minified/intro.min.js"></script>
+		<script type="text/javascript" src="assets/intro.min.js"></script>
     <script type="text/javascript" src="assets/main.js"></script>
-		<script type="text/javascript" src="../node_modules/angular-intro.js/build/angular-intro.min.js"></script>
+		<script type="text/javascript" src="assets/angular-intro.min.js"></script>
 </body>
 </html>
