--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Quiz Client">
   <meta name="theme-color" content="#283593"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="assets/main.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="//www.googletagmanager.com/gtag/js?id=UA-124541017-1"></script>
@@ -19,7 +26,6 @@
 
   </script>
 </head>
-
 <body ng-app="quiz-client">
     <div ng-cloak ng-controller="IntroController as ic">
         <div
@@ -78,7 +84,8 @@
                                 <div class="demo-select-all-checkboxes" flex="100"
                                      ng-repeat="variant in qc.set.current.variants">
                                     <md-checkbox
-                                            ng-disabled="qc.disabled[qc.set.current.id]"
+                                            ng-keypress=="false"
+                                            ng-disabled="qc.disabled[qc.set.current.id] || qc.end"
                                             ng-class="qc.showAnswers ? (variant.isCorrect ? 'variant-green' : 'variant-red') : 'variant-default'"
                                             ng-checked="qc.exists(variant, qc.answers)"
                                             ng-click="qc.toggle(variant, qc.answers)">
@@ -91,7 +98,7 @@
                                             ng-class="qc.submitted ? (!qc.isCorrect ? 'md-input-invalid' : 'md-input-valid') : 'md-input-default'">
                                         <md-icon mb-font-set="md">question_answer</md-icon>
                                         <input
-                                                ng-disabled="qc.disabled[qc.set.current.id]"
+                                                ng-disabled="qc.disabled[qc.set.current.id] || qc.end"
                                                 ng-model="qc.answer"
                                                 type="text"
                                                 placeholder="Question answer">
